kubernetes-manifests/base/loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: circle-banking-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      serviceAccountName: circle-banking-app-sa
      containers:
      - name: loadgenerator
        image: circle-banking-app/loadgenerator:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 384Mi
