kubernetes-manifests/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: circle-banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: circle-banking-app-sa
      containers:
      - name: frontend
        image: circle-banking-app/frontend:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jwt-keys
          mountPath: /tmp/.ssh
          readOnly: true
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 384Mi
      volumes:
      - name: jwt-keys
        secret:
          secretName: jwt-keys
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: circle-banking-app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
