kubernetes-manifests/base/userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: bankcorp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      serviceAccountName: bankcorp-app
      containers:
      - name: userservice
        image: bankcorp/userservice:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jwt-keys
          mountPath: /tmp/.ssh
          readOnly: true
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 384Mi
      volumes:
      - name: jwt-keys
        secret:
          secretName: jwt-keys
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: bankcorp
spec:
  selector:
    app: userservice
  ports:
  - port: 8080
    targetPort: 8080
